--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
  * Author: Sami Keijonen
  * Author URI: https://foxnet-themes.fi
  * Text Domain: cold-winter-dreams
- * Tags: sticky-post, theme-options, threaded-comments, translation-ready, one-column, two-columns, flexible-width, left-sidebar, right-sidebar, custom-background, custom-header, featured-images, editor-style, white, light
+ * Tags: one-column, two-columns, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-images, post-formats, rtl-language-support, theme-options, threaded-comments, translation-ready, white, light
  * License: GNU General Public License v2.0 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  * Template: stargazer
@@ -174,66 +174,85 @@
 	padding: 0.75em;
 }
 #menu-social li a[href*="codepen.io"]::before  {
-	content: '\f216'; background: #fff;
+	content: '\f216';
+	background: #fff;
 }
 #menu-social li a[href*="digg.com"]::before {
-	content: '\f221'; background: #fff;
+	content: '\f221';
+	background: #fff;
 }
 #menu-social li a[href*="dribbble.com"]::before {
 	content: '\f201'; background: #ea4c89;
 }
 #menu-social li a[href*="facebook.com"]::before {
-	content: '\f203'; background: #3b5998;
+	content: '\f203';
+	background: #3b5998;
 }
 #menu-social li a[href*="flickr.com"]::before {
-	content: '\f211'; background: #ff0084;
+	content: '\f211';
+	background: #ff0084;
 }
 #menu-social li a[href*="plus.google.com"]::before {
-	content: '\f206'; background: #dd4b39;
+	content: '\f206';
+	background: #dd4b39;
 }
 #menu-social li a[href*="github.com"]::before {
-	content: '\f200'; background: #4183c4;
+	content: '\f200';
+	background: #4183c4;
 }
 #menu-social li a[href*="instagram.com"]::before {
-	content: '\f215'; background: #3f729b;
+	content: '\f215';
+	background: #3f729b;
 }
 #menu-social li a[href*="linkedin.com"]::before {
-	content: '\f208'; background: #0e76a8;
+	content: '\f208';
+	background: #0e76a8;
 }
 #menu-social li a[href*="pinterest.com"]::before {
-	content: '\f210'; background: #c8232c;
+	content: '\f210';
+	background: #c8232c;
 }
 #menu-social li a[href*="polldaddy.com"]::before {
-	content: '\f217'; background: #bc0b0b;
+	content: '\f217';
+	background: #bc0b0b;
 }
 #menu-social li a[href*="getpocket.com"]::before {
-	content: '\f224'; background: #ee4056;
+	content: '\f224';
+	background: #ee4056;
 }
 #menu-social li a[href*="reddit.com"]::before  {
-	content: '\f222'; background: #336699;
+	content: '\f222';
+	background: #336699;
 }
 #menu-social li a[href*="skype.com"]::before,
 #menu-social li a[href*="skype:"]::before {
-	content: '\f220'; background: #00aff0;
+	content: '\f220';
+	background: #00aff0;
 }
 #menu-social li a[href*="stumbleupon.com"]::before {
-	content: '\f223'; background: #ff2618;
+	content: '\f223';
+	background: #ff2618;
 }
 #menu-social li a[href*="tumblr.com"]::before {
-	content: '\f214'; background: #34526f;
+	content: '\f214';
+	background: #34526f;
 }
 #menu-social li a[href*="twitter.com"]::before {
-	content: '\f202'; background: #33ccff;
+	content: '\f202';
+	background: #33ccff;
 }
 #menu-social li a[href*="vimeo.com"]::before  {
-	content: '\f212'; background: #1ab7ea;
+	content: '\f212';
+	background: #1ab7ea;
 }
 #menu-social li a[href*="wordpress.org"]::before,
 #menu-social li a[href*="wordpress.com"]::before  {
-	content: '\f205'; background: #21759b;
+	content: '\f205';
+	background: #21759b;
 }
 #menu-social li a[href*="youtube.com"]::before {
-	content: '\f213'; background: #c4302b;
+	content: '\f213';
+	background: #c4302b;
 }
 
 /* Clearfix for cold front page sidebar. */
